correctly use mockito